# paninoLauncher_CommunityEdition

./: .gitignore  LICENSE  NOTICE.md  README.en.md  README.it.md  README.md  cabal.project  cabal.project.eventlog  cabal.project.production  hie.yaml
core/: panino-core.cabal
core/app/: Main.hs
core/src/Panino/: Core.hs
core/src/Panino/Api/: MinecraftStatus.hs  Params.hs  Response.hs  Server.hs  Types.hs
core/src/Panino/Api/MinecraftStatus/: Scan.hs  Types.hs
core/src/Panino/Api/Routes/: Compatibility.hs  Configuration.hs  Content.hs  Diagnostics.hs  GraphicsTuning.hs  Health.hs  InstallPlan.hs  LaunchTuning.hs  Local.hs  Lockfile.hs  Minecraft.hs  Network.hs  Performance.hs  PerformancePack.hs  Runtime.hs  TaowaMultiplayer.hs  Tasks.hs
core/src/Panino/Api/Routes/Content/: Cache.hs  Common.hs  InstallPlan.hs  Targets.hs  Task.hs  UpdatePlan.hs
core/src/Panino/Api/Routes/Diagnostics/: EnvironmentConclusions.hs  EnvironmentContext.hs  EnvironmentRecommendations.hs  Probes.hs  RuntimeFeedback.hs
core/src/Panino/Api/Routes/Minecraft/: Common.hs  InstallTask.hs  LaunchHooks.hs  LaunchTask.hs  Phase.hs  Progress.hs
core/src/Panino/Api/Routes/Network/: Config.hs  Probe.hs  SpeedTest.hs
core/src/Panino/Api/Routes/PerformancePack/: Install.hs  Plan.hs  Rollback.hs  Types.hs
core/src/Panino/Api/Routes/TaowaMultiplayer/: ProfileTest.hs  Support.hs
core/src/Panino/Api/Routes/Tasks/: History.hs  Progress.hs
core/src/Panino/Api/Server/: RouteTable.hs  Router.hs  Routing.hs  State.hs
core/src/Panino/Api/Types/: Content.hs  Download.hs  Events.hs  Health.hs  Minecraft.hs  Tasks.hs
core/src/Panino/Compatibility/: Evaluate.hs  Explain.hs  Rules.hs  Types.hs
core/src/Panino/Content/: Local.hs  Online.hs
core/src/Panino/Content/Configuration/: Modpack.hs  Preflight.hs  Types.hs
core/src/Panino/Content/Configuration/Modpack/: Import.hs  Manifest.hs  Plan.hs
core/src/Panino/Content/Local/: Conflict.hs  Delete.hs  Import.hs  Java.hs  Metadata.hs  Path.hs  Scan.hs  Types.hs
core/src/Panino/Content/Online/: CurseForge.hs  Errors.hs  Http.hs  Minecraft.hs  Modrinth.hs  Normalize.hs  Types.hs
core/src/Panino/Content/Online/CurseForge/: Types.hs
core/src/Panino/Content/Online/Modrinth/: Types.hs
core/src/Panino/Content/Online/Types/: Minecraft.hs  Project.hs  Request.hs
core/src/Panino/Core/: CommandLine.hs  TypedToml.hs  Types.hs  WireText.hs
core/src/Panino/CoreLogic/: Determinism.hs  Hashing.hs
core/src/Panino/Diagnostics/: Classify.hs  Types.hs
core/src/Panino/Download/: Hash.hs  HostGate.hs  Manager.hs  Multipart.hs  Scheduler.hs  Transfer.hs  Types.hs  VerificationIndex.hs  WorkerLimit.hs
core/src/Panino/Download/Manager/: HostStats.hs  Preverified.hs  Progress.hs
core/src/Panino/Events/: Bus.hs
core/src/Panino/Graphics/Tuning/: Options.hs  Recommend.hs  Types.hs
core/src/Panino/Graphics/Tuning/Recommend/: Policy.hs
core/src/Panino/Install/Plan/: Executor.hs  State.hs  Types.hs
core/src/Panino/Launch/: Arguments.hs  Java.hs
core/src/Panino/Launch/Tuning/: Recommend.hs  Types.hs
core/src/Panino/Lockfile/: Apply.hs  Changeset.hs  Explain.hs  Normalize.hs  Plan.hs  Services.hs  Solver.hs  Store.hs  Types.hs  Verify.hs
core/src/Panino/Lockfile/Services/: Evidence.hs  Java.hs  Online.hs  Preflight.hs
core/src/Panino/Lockfile/Solver/: Build.hs  Conflicts.hs  Resolve.hs  Room.hs
core/src/Panino/Lockfile/Types/: Document.hs  Package.hs  Solver.hs  Verify.hs
core/src/Panino/Minecraft/: Install.hs  InstallPlanGraph.hs  InstallPreflight.hs  InstanceMetadata.hs  LauncherProfiles.hs  Layout.hs  LoaderInstall.hs  Manifest.hs  ModPreflight.hs  Modrinth.hs  Types.hs
core/src/Panino/Minecraft/Install/: Jobs.hs
core/src/Panino/Minecraft/InstallPlanGraph/: Typed.hs  Types.hs
core/src/Panino/Minecraft/InstallPreflight/: Checks.hs  Plan.hs  Probe.hs  Resolve.hs  Types.hs
core/src/Panino/Minecraft/LoaderInstall/: Names.hs  Profile.hs  Shader.hs  Types.hs  Verify.hs
core/src/Panino/Minecraft/LoaderInstall/Profile/: Common.hs  Installer.hs  Meta.hs
core/src/Panino/Multiplayer/Taowa/: ConfigStore.hs  Diagnostics.hs  FrpcConfig.hs  FrpcProcess.hs  LanDetect.hs  Session.hs  Types.hs
core/src/Panino/Net/: Http.hs  Probe.hs  Sources.hs
core/src/Panino/Net/Http/: Fetch.hs  Request.hs  Retry.hs
core/src/Panino/Perf/: Metrics.hs
core/src/Panino/Performance/: Candidate.hs  CompanionProtocol.hs  Experiment.hs  Explain.hs  Objective.hs  Pack.hs  RendererCapability.hs  SafetyGate.hs  Summary.hs  ValidationMatrix.hs
core/src/Panino/Performance/Profile/: Store.hs  Types.hs
core/src/Panino/Performance/Telemetry/: Collect.hs  GcLog.hs  Types.hs
core/src/Panino/Platform/: Hardware.hs
core/src/Panino/Runtime/Java/: Catalog.hs  Install.hs  Requirements.hs  Resolve.hs  Store.hs  Types.hs
core/test/: Main.hs  TestFixtures.hs  TestSupport.hs
core/test/Integration/: ApiJson.hs  ApiServerRouting.hs  ContentPlan.hs  CoreCli.hs  CoreTypes.hs  Diagnostics.hs  DownloadManager.hs  DownloadVerification.hs  GraphicsTuning.hs  InstallPlanExecutor.hs  InstanceMetadata.hs  JavaRequirements.hs  JavaRuntime.hs  JvmTuning.hs  LaunchArguments.hs  LaunchTask.hs  LoaderSelection.hs  LoaderShader.hs  LoaderShaderFixtureServer.hs  LocalInstanceStatus.hs  LockfileSolver.hs  MinecraftInstall.hs  MinecraftPlan.hs  ModPreflight.hs  Modpack.hs  ModrinthDependencyResolver.hs  NetworkFailure.hs  Performance.hs  SourceOverrides.hs  Taowa.hs  TypedInstallPlan.hs
core/test/Integration/ContentPlan/: Search.hs  Targets.hs  TypedInstall.hs  Update.hs
core/test/Integration/DownloadManager/: Multipart.hs  Progress.hs
core/test/Integration/JavaRuntime/: Archive.hs  Install.hs  Local.hs  Store.hs
core/test/Integration/LoaderShader/: Preflight.hs
core/test/Integration/LockfileSolver/: Room.hs  Update.hs
core/test/Integration/ModrinthDependencyResolver/: JavaPolicy.hs
core/test/Integration/Taowa/: Lan.hs
core/test/Property/: Compatibility.hs  Diagnostics.hs  Generators.hs  Lockfile.hs  Performance.hs  Plan.hs  Runner.hs
scripts/: benchmark-core-network.sh  (+14 more)
(+631 files in other folders)
